fix layout issue in homepage

--- a/src/App.css
+++ b/src/App.css
@@ -183,11 +183,11 @@ button {
   border: none;
   border-radius: 5px;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
 }
 
 .search-box {
